src/renderer/src/components/GameHero/GameHero.module.css
.hero {
  position: relative;
  height: 500px;
  display: flex;
  justify-content: flex-end;
  flex-direction: column;
  overflow: hidden;
  background-color: var(--mantine-primary-color-light);
}

.overlay {
  z-index: 1;
}

.content {
  position: relative;
  z-index: 2;
  flex-direction: column;
  align-items: start;
  margin-bottom: var(--mantine-spacing-xl);
}

.title {
  margin-bottom: var(--mantine-spacing-md);
  line-height: var(--mantine-line-height-xs);
  color: var(--mantine-primary-color-contrast);
  font-weight: 900;
  font-size: 50px;
  width: 100%;
  max-width: 900px;
  text-shadow: #000 0px 0px 0.2rem;
}

